# nt-syscall-rs

./: Cargo.toml  README.md  format_csv.js
const-asm/: Cargo.toml
const-asm/src/: lib.rs
dummy/: Cargo.toml  build.rs
dummy/src/: lib.rs  x64.rs  x86.rs
dummy/src/x64/: mod.rs  varargs.rs  vectorcall.rs  win64.rs
dummy/src/x86/: mod.rs  varargs.rs
src/: args.rs  float.rs  lib.rs  ordinal_invalid.rs  ordinal_x64.rs  shared.rs  version.rs
src/indices/: invalid.rs  mod.rs
src/indices/x64/: mod.rs  windows_10_1507.rs  windows_10_1511.rs  windows_10_1607.rs  windows_10_1703.rs  windows_10_1709.rs  windows_10_1803.rs  windows_10_1809.rs  windows_10_1903.rs  windows_10_20h2.rs  windows_10_21h2.rs  windows_11_21h2.rs  windows_8_1.rs  windows_server_2003_sp2.rs  windows_server_2008_r2.rs  windows_server_2008_sp0.rs  windows_server_2012_sp0.rs  windows_vista_sp0.rs  windows_vista_sp2.rs
src/indices/x86/: mod.rs  windows_10_1507.rs  windows_10_1511.rs  windows_10_1607.rs  windows_10_1703.rs  windows_10_1709.rs  windows_10_1803.rs  windows_10_1809.rs  windows_10_1909.rs  windows_10_2004.rs  windows_2000_sp0.rs  windows_2000_sp2.rs  windows_2000_sp4.rs  windows_7_sp0.rs  windows_7_sp1.rs  windows_8_0.rs  windows_8_1.rs  windows_nt_sp3.rs  windows_nt_sp3_ts.rs  windows_nt_sp4.rs  windows_nt_sp5.rs  windows_nt_sp6.rs  windows_server_2003_r2_sp2.rs  windows_server_2003_sp0.rs  windows_server_2003_sp2.rs  windows_server_2008_sp0.rs  windows_server_2008_sp2.rs  windows_vista_sp0.rs  windows_vista_sp1.rs  windows_vista_sp2.rs  windows_xp_sp1.rs  windows_xp_sp3.rs
src/tests/: mod.rs  x64.rs  x64_into_x86.rs  x86.rs  x86_into_x64.rs
src/x64/: args.rs  assemble.rs  callconv.rs  encode.rs  inline.rs  mod.rs  shellcode.rs
src/x64/callconv/: mod.rs  syscall.rs  varargs.rs  vectorcall.rs  win64.rs
src/x86/: args.rs  assemble.rs  binary.rs  callconv.rs  encode.rs  inline.rs  mod.rs  shellcode.rs  syscall.rs
src/x86/callconv/: cdecl.rs  fastcall.rs  mod.rs  stdcall.rs  syscall.rs  thiscall.rs  varargs.rs  vectorcall.rs
