[package]
name = "nt-syscall"
version = "0.2.0"
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2024"

[workspace]
members = [
    ".",
    "dummy",
]

[dependencies]
const-str = "0.7.1"
tt-call = "1.0.9"
nt-sysdump = {path = "../nt-sysdump-rs"}

[dev-dependencies]
winapi = {version = "0.3.9", features = ["memoryapi", "processthreadsapi"]}
nt-sysdump = {path = "../nt-sysdump-rs"}

[profile.release]
debug = true
