[package]
name = "nt-syscall"
version = "0.2.0"
authors = ["svorr <svorre2304@gmail.com>"]
edition = "2024"

[workspace]
members = [
    ".",
    "const-asm",
    "dummy",
]

[dependencies]
aligned = "0.4.3"
const-str = "0.7.1"
const-asm = {path = "./const-asm"}

[dev-dependencies]
winapi = {version = "0.3.9", features = ["memoryapi", "processthreadsapi"]}
nt-sysdump = {path = "../nt-sysdump-rs"}
